Fix issue when header background merge phone and menu icons on tablets

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,8 +2,6 @@
   padding: 0 20px;
 
   @include onTablet() {
-    max-width: 600px;
-    margin: 0 auto;
     padding: 0 72px;
   }
 
